- version 0.13.0

* Change the code to C++20 only
* First trivial C++ refactorings (introduction of namespaces, fewer
  preprocessor magic, idiomatic data structures)
* Remove the hand written double linked lists and use standard containers

- version 0.12.0

*  #17: Add the ability to place Armies with the mouse wheel

* [bug #16] Fix the client-side deadlock when the server shuts down and the
  client tries to reconnect.
* introduction of a new code style
* removal of unused code
* lots of refactorings

- version 0.11.2

Mar 13 2007
[bug 1634385] Updated french translation (by Cyril Brulebois)
[bug 1628790] Updated spanish translation (by Carlos Galisteo)

Apr 02 2006
Change Metaserver address to teg.game-server.cc

Mar 16 2006
Fix for remote DoS (CAN-2006-1150) found by Luigi Auriemma <aluigi@autistici.org>
Updated the spec file for Suse Linux 10.0

Mar 14 2006
[bug 991399] Premature victory after surrender fixed
Increased dialog width (German text did not fit inside)
Switched boards from png to jpg to save space for theme (~400kB per theme)
Minor fixes

Mon Mar 13 2006
Fix for crash in tegrobot when placing more than 50 armies

Mar 09 2006
[bug 1307267] Fixed typo in Spanish translation
[bug 1107661] Fixed missing detail about getting new cards
[bug 1107636] Regroup dialog pops up only if selected
Many typos in German translation fixed
Many minor fixes

Jan 1 2006
Remake of "sentimental" theme

Dec 20 2005 
Galician translation by Nacho Resa

Apr 24 2005
Switch from autoconf 2.13 to 2.5
Switch from automake 1.4 to 1.8

Aug 4 2004
Hungarian translation by Lenart Janos <ocsi@debian.org>

Aug 4, 2004
Applied Josef Spillner patches to make it compatible with new ggz scoring.
Added Hungarian translation by Lenart Janos <ocsi@debian.org>


- version 0.11.1

Feb 8, 2004
Ok, a lot of time passed since the last version of TEG.
This is a maintainence release. Fixed the canvas crash.


- version 0.11.0

Oct 19, 2002
Final fixes for v0.11.0

Oct 13, 2002