@@ -342,9 +342,7 @@ error:
 /* Creates a Player */
 STATIC TEG_STATUS token_playerid(int fd, char *str)
 {
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	SPLAYER j, *pJ;
 	char c[maximum_player_count];
 	char colores[100];
@@ -361,10 +359,6 @@ STATIC TEG_STATUS token_playerid(int fd, char *str)
 	if(strlen(str)==0) {
 		goto error;
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
 
 	memset(&j, 0, sizeof(SPLAYER));
 
@@ -568,9 +562,7 @@ error:
 /* A player is attacking from src to dst */
 STATIC TEG_STATUS token_attack(int fd, char *str)
 {
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	int src, dst, src_lost, dst_lost;
 	char d_src[3], d_dst[3];
 	PSPLAYER pJ_src, pJ_dst;
@@ -592,10 +584,6 @@ STATIC TEG_STATUS token_attack(int fd, char *str)
 			goto error;
 		}
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
 
 	if(p.parse_fragment()) {
 		src = atoi(p.token);
@@ -745,9 +733,7 @@ error:
 /* Place armies in the conquered country */
 STATIC TEG_STATUS token_tropas(int fd, char *str)
 {
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	int src, dst, cant;
 	PSPLAYER pJ;
 
@@ -756,10 +742,6 @@ STATIC TEG_STATUS token_tropas(int fd, char *str)
 	if(!SPLAYER_TROPAS_P(fd, &pJ) || strlen(str)==0) {
 		goto error;
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
 
 	if(p.parse_fragment()) {
 		src = atoi(p.token);
@@ -950,9 +932,7 @@ error:
 /* Place 2 armies in the card's country. The player must own the country */
 STATIC TEG_STATUS token_ejer2(int fd, char *str)
 {
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	int country;
 	PSPLAYER j;
 
@@ -969,10 +949,6 @@ STATIC TEG_STATUS token_ejer2(int fd, char *str)
 	if(j->estado != PLAYER_STATUS_TARJETA) {
 		goto error;
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
 
 	if(p.parse_everything()) {
 		country = atoi(p.token);
@@ -1011,9 +987,7 @@ error:
 /* To exchange cards for armies */
 STATIC TEG_STATUS token_canje(int fd, char *str)
 {
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	PSPLAYER pJ;
 	int t1, t2, t3;
 	int canj_ejer;
@@ -1027,10 +1001,6 @@ STATIC TEG_STATUS token_canje(int fd, char *str)
 	if(pJ->estado != PLAYER_STATUS_FICHASC) {
 		goto error;
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
 
 	if(p.parse_fragment()) {
 		t1 = atoi(p.token);
@@ -1081,9 +1051,7 @@ error:
 /* Player is regrouping its armies */
 STATIC TEG_STATUS token_regroup(int fd, char *str)
 {
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	int src, dst, cant;
 	int ejer_disp;
 	PSPLAYER pJ;
@@ -1102,11 +1070,6 @@ STATIC TEG_STATUS token_regroup(int fd, char *str)
 	if(pJ->estado < PLAYER_STATUS_TURNOSTART || pJ->estado > PLAYER_STATUS_REAGRUPE) {
 		goto error;
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
-
 
 	if(p.parse_fragment()) {
 		src = atoi(p.token);
@@ -1218,9 +1181,7 @@ error:
 /* Enums the players'countries , or of all players if player is -1 */
 STATIC TEG_STATUS token_countries(int fd, char *str)
 {
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	int i;
 	PSPLAYER pJ;
 	char strout[PROT_MAX_LEN];
@@ -1234,10 +1195,6 @@ STATIC TEG_STATUS token_countries(int fd, char *str)
 	if(strlen(str)==0) {
 		goto error;
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
 
 	if(p.parse_everything()) {
 		i = atoi(p.token);
@@ -1382,9 +1339,7 @@ STATIC TEG_STATUS token_sversion(int fd, char *unused)
 STATIC TEG_STATUS token_pversion(int fd, char *str)
 {
 	PSPLAYER pJ;
-	PARSER p;
-	DELIM igualador= { ':', ':', ':' };
-	DELIM separador= { ',', ',', ',' };
+	PARSER p{str};
 	int hi;
 
 	PLAY_DEBUG("token_pversion()\n");
@@ -1393,10 +1348,6 @@ STATIC TEG_STATUS token_pversion(int fd, char *str)
 	if(strlen(str)==0) {
 		goto error;
 	}
-
-	p.equals = &igualador;
-	p.separators = &separador;
-	p.data = str;
 
 	if(p.parse_fragment()) {
 		hi = atoi(p.token);
@@ -1503,24 +1454,14 @@ STATIC TEG_STATUS token_lookup(int fd, PARSER *p)
 /* Read the file descriptor and call the apropiate function */
 TEG_STATUS play_teg(int fd)
 {
-	int i, j;
-	PARSER p;
-	char str[PROT_MAX_LEN];
-	DELIM igualador= { '=', '=', '=' };
-	DELIM separador= { ';', ';', ';' };
-
-	p.equals = &igualador;
-	p.separators = &separador;
-
-	str[0]=0;
-
 	if(g_game.fog_of_war) {
 		g_game.player_fow = NULL;
 	}
 
-	j=net_readline(fd, str, PROT_MAX_LEN);
+	char str[PROT_MAX_LEN];
+	str[0]=0;
 
-	if(j<1) {
+	if(net_readline(fd, str, PROT_MAX_LEN)<1) {
 		PSPLAYER pJ;
 		if(player_whoisfd(fd, &pJ) == TEG_STATUS_SUCCESS) {
 			player_del_hard(pJ);
@@ -1537,15 +1478,17 @@ TEG_STATUS play_teg(int fd)
 		}
 	}
 
-	p.data = str;
+	PARSER p{str, '=', ';'};
 
 	do {
-		if((i=p.parse())) {
-			if(token_lookup(fd, &p) == TEG_STATUS_CONNCLOSED) {
-				return TEG_STATUS_CONNCLOSED;
-			}
+		if(!p.parse()) {
+			break;
 		}
-	} while(i && p.can_continue);
+
+		if(token_lookup(fd, &p) == TEG_STATUS_CONNCLOSED) {
+			return TEG_STATUS_CONNCLOSED;
+		}
+	} while(p.can_continue);
 
 	return TEG_STATUS_SUCCESS;
 }
